--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "autoprefixer": "^10.2.4",
     "postcss": "^8.2.6",
+    "postcss-loader": "^5.0.0",
     "tailwindcss": "^2.0.3",
     "webpack": "^5.24.2",
     "webpack-cli": "^4.5.0"
