--- a/package.json
+++ b/package.json
@@ -4,17 +4,23 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev:watch": "webpack serve --mode development",
+    "dev:build": "webpack --mode development",
+    "production": "export NODE_ENV=production && webpack --mode production",
+    "start": "npm run dev:watch"
   },
   "keywords": [],
-  "author": "",
+  "author": "Alexander Morales",
   "license": "ISC",
   "devDependencies": {
-    "autoprefixer": "^10.2.4",
+    "css-loader": "^5.2.4",
     "postcss": "^8.2.6",
     "postcss-loader": "^5.0.0",
+    "style-loader": "^2.0.0",
     "tailwindcss": "^2.0.3",
-    "webpack": "^5.24.2",
-    "webpack-cli": "^4.5.0"
+    "webpack": "^5.37.0",
+    "webpack-cli": "^4.7.0",
+    "webpack-dev-server": "^3.11.2"
   }
 }
