--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev:watch": "webpack serve --mode development",
     "dev:build": "webpack --mode development",
-    "production": "export NODE_ENV=production && webpack --mode production",
+    "production": "export NODE_ENV=production && webpack --mode production && webpack serve --mode production",
     "start": "npm run dev:watch"
   },
   "keywords": [],
@@ -15,10 +15,11 @@
   "license": "ISC",
   "devDependencies": {
     "css-loader": "^5.2.4",
+    "html-webpack-plugin": "^5.3.1",
     "postcss": "^8.2.6",
     "postcss-loader": "^5.0.0",
     "style-loader": "^2.0.0",
-    "tailwindcss": "^2.0.3",
+    "tailwindcss": "^2.1.2",
     "webpack": "^5.37.0",
     "webpack-cli": "^4.7.0",
     "webpack-dev-server": "^3.11.2"
