--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "mojitoo",
+  "name": "tailwind-webpack-starter",
   "version": "1.0.0",
-  "description": "",
+  "description": "A simple repo setup of TailwindCSS 2 with Webpack 5",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
